--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "axios": "^1.6.7",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "helmet": "^7.0.0",
+    "express-rate-limit": "^6.7.0"
   }
 }
