--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "cors": "^2.8.5",
     "helmet": "^7.0.0",
     "express-rate-limit": "^6.7.0"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
