--- a/package.json
+++ b/package.json
@@ -8,11 +8,15 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "cors": "^2.8.5",
+    "express-rate-limit": "^6.7.0",
     "helmet": "^7.0.0",
-    "express-rate-limit": "^6.7.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.6.0",
+    "morgan": "^1.10.0"
   },
   "engines": {
     "node": "18.x"
