--- a/package.json
+++ b/package.json
@@ -1,19 +1,16 @@
 {
-  "name": "procryptomancer-backend",
+  "name": "contest-api",
   "version": "1.0.0",
   "type": "module",
-  "main": "server.js",
+  "engines": { "node": ">=18" },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "node --watch server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-rate-limit": "^6.7.0",
-    "helmet": "^7.0.0"
-  },
-  "engines": {
-    "node": "18.20.2"
+    "express": "^4.19.2",
+    "helmet": "^7.0.0",
+    "express-rate-limit": "^7.3.1"
   }
 }
