--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "contest-api",
   "version": "1.0.0",
+  "description": "API Express prête pour Render",
   "type": "module",
   "engines": { "node": ">=18" },
   "scripts": {
@@ -10,7 +11,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "helmet": "^7.0.0",
+    "helmet": "^7.1.0",
     "express-rate-limit": "^7.3.1"
   }
 }
