--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "contest-api",
-  "version": "1.0.0",
-  "description": "API Express prête pour Render",
+  "name": "procryptomancer-backend",
+  "version": "1.1.0",
+  "description": "API Express + MongoDB (Render-ready) pour ProCryptomancer",
   "type": "module",
   "engines": { "node": ">=18" },
   "scripts": {
@@ -11,7 +11,11 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.3.1",
     "helmet": "^7.1.0",
-    "express-rate-limit": "^7.3.1"
+    "joi": "^17.13.3",
+    "mongoose": "^8.5.1",
+    "morgan": "^1.10.0",
+    "swagger-ui-express": "^5.0.1"
   }
 }
