--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "procryptomancer-backend",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "API Express + MongoDB (Render-ready) pour ProCryptomancer",
   "type": "module",
   "engines": { "node": ">=18" },
   "scripts": {
-    "start": "node server.js",
-    "dev": "node --watch server.js"
+    "start": "node src/server.js",
+    "dev": "node --watch src/server.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
